# strands-demo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  app.py  packages.txt  pyproject.toml  requirements.txt
.claude/commands/: speckit.fleet.md  speckit.review.md
.specify/extensions/: .registry
.specify/memory/: constitution.md
.streamlit/: config.toml  secrets.toml.example
infra/: cognito.yaml
infra/agentcore/: Dockerfile  requirements-agent.txt  template.yaml
scripts/: eval-agent.sh  provision_users.py
specs/001-python-env-bootstrap/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-cognito-login/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-strands-reasoning-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-agentcore-deploy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-streamlit-cloud-deploy/: .analyze-done  .verify-done  plan.md  quickstart.md  research.md  review.md  spec.md  tasks.md
specs/006-agentcore-observability/: .analyze-done  .verify-done  plan.md  quickstart.md  research.md  review.md  spec.md  tasks.md
specs/007-eks-mcp-server/: .analyze-done  .verify-done  plan.md  quickstart.md  research.md  review.md  spec.md  tasks.md
specs/008-aws-api-mcp-server/: .analyze-done  .verify-done  data-model.md  plan.md  research.md  review.md  spec.md  tasks.md
specs/009-agentcore-memory/: .analyze-done  data-model.md  plan.md  research.md  review.md  spec.md  tasks.md
src/agent/: browser_tools.py  (+3 more)
(+99 files in other folders)
